<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:background="#2f2f2f"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:layout_gravity="center"
            android:textColor="#FFF"/>

        <Switch
            android:id="@+id/playlistToggle"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp" />

        <Button
            android:id="@+id/addSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#2f2f2f"
            android:textColor="#FFF"
            android:text="@string/add_song"
            android:textSize="8sp"
            android:visibility="invisible"
            android:drawableTop="@drawable/volumeup_icon"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/removeSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#2f2f2f"
            android:textColor="#FFF"
            android:text="@string/remove_song"
            android:textSize="8sp"
            android:visibility="invisible"
            android:drawableTop="@drawable/volumedown_icon"
            tools:ignore="SmallSp" />

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:backgroundTint="#2f2f2f"
            android:src="@drawable/previous_icon"
            android:contentDescription="@string/previous" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#2f2f2f"
            android:src="@drawable/play_icon"
            android:contentDescription="@string/play_pause" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#2f2f2f"
            android:src="@drawable/next_icon"
            android:contentDescription="@string/next" />

        <ImageButton
            android:id="@+id/mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:backgroundTint="#2f2f2f"
            android:src="@drawable/mute_icon"
            android:contentDescription="@string/mute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#2f2f2f"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="160dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:src="@drawable/main_screen2"
                android:contentDescription="@string/background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/volumeDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:src="@drawable/volumedown_icon"
                    android:contentDescription="@string/volumeDown" />

                <SeekBar
                    android:id="@+id/seek"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:progressTint="#FFF"
                    android:thumbTint="#979797" />

                <ImageButton
                    android:id="@+id/volumeUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:src="@drawable/volumeup_icon"
                    android:contentDescription="@string/volumeUp" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#979797">

            <ListView
                android:id="@+id/songList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#979797">
            </ListView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>